--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <% if current_user %>
   <%= "Welcome #{current_user.name}" %>
   <%= link_to 'Log Out', signout_path %>
+  <%= link_to 'Repositories', repositories_path %>
 <% else %>
   <%= link_to "Sign in with Github", "/auth/github" %>
 <% end %>
