--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= jquery-ui.min.css
  *= bootstrap
+ *= bootstrap-datepicker
  *= require_tree .
  *= require_self
  */
