--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -3,7 +3,7 @@
     <div class="portlet box green">
       <div class="portlet-title">
         <div class="caption">
-          <i class="fa fa-list-ul badge-warning"></i>Repositories Listing
+          <h4>Repositories Listing</h4>
         </div>
       </div>
       <% if @responses.blank? %>
@@ -15,17 +15,17 @@
           </div>
         </div>
       <% else %>
-        <div class="portlet-body form" id='course-listing'>
-          <table  class="table table-striped table-bordered table-hover no-footer" role="grid" id="course_listing_table">
+        <div class="portlet-body">
+          <table  class="table table-striped table-bordered table-hover no-footer" role="grid" >
             <thead>
-              <tr role="row" class='columnWrap'>
+              <tr role="row">
                 <th>Title</th>
               </tr>
             </thead>
             <tbody>
               <% @responses.each do |repo| %>
                 <tr role="row" class="odd" data-no-turbolink >
-                  <td class="col-md-3"><%= link_to repo['name'], repository_path(id: repo['name'], description: repo['description']) %></td>
+                  <td class="col-md-12"><%= link_to repo['name'], repository_path(id: repo['name'], description: repo['description']) %></td>
                 </tr>
               <% end %>
             </tbody>
