--- a/app/views/repositories/show.html.erb
+++ b/app/views/repositories/show.html.erb
@@ -3,49 +3,30 @@
     <div class="portlet box green">
       <div class="portlet-title">
         <div class="caption">
-          <i class="fa fa-list-ul badge-warning"></i>View Repository
+          <h4>View Repository</h4>
         </div>
       </div>
-        <div class="portlet-body form" id='course-listing'>
-          <table  class="table table-striped table-bordered table-hover no-footer" role="grid" id="course_listing_table">
+        <div class="portlet-body form" >
+          <table  class="table table-striped table-bordered table-hover no-footer" role="grid">
             <tbody>
-              <tr role="row" class='columnWrap'>
+              <tr role="row" class="row">
                 <th class="col-md-3">Name</th>
-                <td class="col-md-3"><%= params['id'] %></td>
+                <td class="col-md-9"><%= params['id'] %></td>
               </tr>
-                <tr role="row" class="odd" data-no-turbolink >
-                  <th class="col-md-3">Description</th>
-                  <td class="col-md-3"><%= params['description'] %></td>
-                </tr>
+              <tr role="row" class="row" >
+                <th class="col-md-3">Description</th>
+                <td class="col-md-9"><%= params['description'] %></td>
+              </tr>
             </tbody>
           </table>
-          <% if false %>
-            <div class="portlet-body">
-              <div class="row">
-                <div class="col-md-12">
-                  <h4>No commits present!</h4>
-                </div>
-              </div>
+          <%= form_tag(get_repo_commits_repository_path(id: params['id']), method: :get, remote: true) do %>
+            <div class="form-group">
+              <%= render 'search' %>
             </div>
-          <% else %>
-            <h4>Commits</h4>
-            <div class="row">
-              <div class="col-md-9">
-                Commit Message
-              </div>
-              <div class="col-md-3">
-                Date
-              </div>
-              <% @response.each do |commit| %>
-                <div class="col-md-9">
-                  <%= commit['commit']['message']%>
-                </div>
-                <div class="col-md-3">
-                  <%= commit['commit']['committer']['date']%>
-                </div>
-              <% end %>
-            </div>
-          <%end%>
+          <% end %>
+          <div class="commits-listing">
+            <%#= render 'listing' %>
+          </div>
         </div>
     </div>
   </div>
