--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OAuth</title>
+    <title>oAuth</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,7 +9,29 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="page-header-fixed page-quick-sidebar-over-content">
+    <div class="Header page-header navbar navbar-fixed-top">
+      <div class="page-header-inner">
+        <h4>oAuth GitHub</h4>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div class="page-container">
+      <div class="page-content-wrapper">
+        <div class="page-content text-center">
+          <div class="row">
+            <div class="col-md-12 m-t-150">
+            </div>
+          </div>
+          <% flash.each do |type, msg|%>
+            <div class="alert <%= css_class_for(type) %> fade in alert-dismissable">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+              <%= msg.to_s.html_safe %>
+            </div>
+          <% end %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
