--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
 <% if current_user %>
-  <%= "Welcome #{current_user.name}" %>
-  <%= link_to 'Log Out', signout_path %>
-  <%= link_to 'Repositories', repositories_path %>
+  <h5><%= link_to 'Log Out', signout_path, class: 'btn btn-primary m-t-20' %> <%= "Welcome #{current_user.name}" %></h5>
+  <%= link_to 'Repositories', repositories_path, class: 'm-l-15' %>
 <% else %>
-  <%= link_to "Sign in with Github", "/auth/github" %>
+  <%= link_to image_tag("logo.png", alt: "logo"), url_for("https://oauth-assignment.herokuapp.com/"), target: "_blank"%>
+  <div>
+	  <%= link_to "Sign in with Github", "/auth/github", class: 'btn btn-primary m-t-20' %>
+  </div>
 <% end %>
