--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,4 @@
-<% if current_user %>
-  <h5><%= link_to 'Log Out', signout_path, class: 'btn btn-primary m-t-20' %> <%= "Welcome #{current_user.name}" %></h5>
-  <%= link_to 'Repositories', repositories_path, class: 'm-l-15' %>
-<% else %>
+<% unless current_user %>
   <%= link_to image_tag("logo.png", alt: "logo"), url_for("https://oauth-assignment.herokuapp.com/"), target: "_blank"%>
   <div>
 	  <%= link_to "Sign in with Github", "/auth/github", class: 'btn btn-primary m-t-20' %>
