Added bar graph for showing commits count grouped by date

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -17,3 +17,9 @@
 table{
 	text-align: left !important;
 }
+#chart div {
+  display: inline-block;
+  background: #4285F4;
+  width: 80px;
+  margin-right: 3px;
+}
